--- a/shakespeare.css
+++ b/shakespeare.css
@@ -42,3 +42,8 @@
 .cast tr:nth-child(even) {
     background-color: #f2f2f2;
 }
+.name:hover {
+    text-shadow: 2px 2px 5px purple;
+    border: 2px solid gold;
+    padding: 2px;
+}
